--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="https://avatars3.githubusercontent.com/u/24280491?v=4">
+    <link rel="icon" href="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
     <title>Github Users</title>
   </head>
   <body>
